Fixed horizontal overflowing

--- a/Lab-1/styles.css
+++ b/Lab-1/styles.css
@@ -80,7 +80,7 @@ li a:hover {
 	color: white;
 }
 
-body {
+html, body {
 	margin:0;
 	width: 100%;
 	overflow-x: hidden;
